# cf-speedtest

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
cf_speedtest/: __init__.py  __main__.py  cf_speedtest.py  locations.py  options.py  speedtest.py
tests/: all_test.py  conftest.py  integration_test.py  network_test.py  options_test.py  speedtest_test.py  test_all.py  utils_test.py
