[metadata]
name = cf_speedtest
version = 0.1.6
description = Command-line internet speed test
long_description = README.md
long_description_content_type = text/markdown
author = wilbo007
author_email = wilbo007@protonmail.ch
url = https://github.com/12932/cf-speedtest
license = MIT
classifiers =
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6.0
packages = find:
install_requires = requests[socks]>=2.22.0
include_package_data = True

[options.packages.find]
exclude =
	tests
	*.tests
	*.tests.*
	tests.*

[options.entry_points]
console_scripts =
	cf-speedtest = cf_speedtest.cf_speedtest:main
	cf_speedtest = cf_speedtest.cf_speedtest:main