[metadata]
name = cf_speedtest
version = 0.1.7
description = Command-line internet speed test
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/12932/cf-speedtest
author = wilbo007
author_email = wilbo007@protonmail.ch
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    requests[socks]>=2.22.0
python_requires = >=3.7
include_package_data = True

[options.packages.find]
exclude =
    tests
    *.tests
    *.tests.*
    tests.*

[options.entry_points]
console_scripts =
    cf-speedtest = cf_speedtest.cf_speedtest:main
    cf_speedtest = cf_speedtest.cf_speedtest:main
